This commit tweaks the styling of the confirmation page, fixing whitespace and ensures the map works correctly.

--- a/NHS111/NHS111.Web.Frontend/src/codebase/components/service-details/_service-details.scss
+++ b/NHS111/NHS111.Web.Frontend/src/codebase/components/service-details/_service-details.scss
@@ -22,6 +22,11 @@
   width: 100%;
 }
 
+.reference-number {
+  font-size: 28px;
+  font-family: monospace;
+}
+
 .service-details__phone {
   @include nhsuk-font(48, 'bold');
 }
